# hypute-ml

./: .gitignore  CMakeLists.txt  README.md  hypute_ml.h  hypute_ml_lm.h
.github/workflows/: benchmark.yml
benchmarks/inference/: benchmark.cpp
evaluation/: main.cpp
examples/chatbot/: chat.cpp  chatbot_vocab.json  compare_transformer.py  resume_log.txt  resume_training.py  train_chatbot.py  train_colab.py  train_log.txt
examples/lm/: compare_lm.py  generate.cpp  requirements.txt  train_lm.py
examples/sentiment/: compare.py  eval.cpp  requirements.txt  train.py
tools/: generate_weights.cpp
